--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Sahara Admin Application -->
-    <title>Sahara Admin</title>
-    <meta name="description" content="Sahara Admin Dashboard" />
-    <meta name="author" content="Sahara" />
+<html lang="en" class="dark">
 
-    <meta property="og:title" content="Sahara Admin" />
-    <meta property="og:description" content="Sahara Admin Dashboard" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Sahara Admin Application -->
+  <title>Sahara Admin</title>
+  <meta name="description" content="Sahara Admin Dashboard" />
+  <meta name="author" content="Sahara" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Sahara" />
-    <meta name="twitter:image" content="/placeholder.svg" />
-  </head>
+  <meta property="og:title" content="Sahara Admin" />
+  <meta property="og:description" content="Sahara Admin Dashboard" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/placeholder.svg" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Sahara" />
+  <meta name="twitter:image" content="/placeholder.svg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
